# banking_system

./: .pre-commit-config.yaml  main.py  pyproject.toml
app/: main.py
app/templates/: base.html
